MigrationLockService: Added RuntimeException for critical database access errors in methods isLocked, lock, and unlock. PropertiesUtils: Added RuntimeException for critical errors during the loading of properties. MigrationRollbackGenerator: Added RuntimeException for I/O errors during rollback file generation. MigrationFileReader: Added RuntimeException for I/O errors while reading migration files. MigrationReportService: Added RuntimeException for errors while generating JSON reports. MigrationHistoryService: Added RuntimeException for database access errors in methods recordMigration, getAppliedMigrations, and removeMigrationRecord. RollbackExecutor: Added RuntimeException for critical errors in rollback operations and connection handling. MigrationExecutor: Added RuntimeException for critical errors in migration operations and connection handling. EssentialTableCreator: Added RuntimeException for database errors while creating essential tables. ConnectionManager: Added RuntimeException for errors during the creation of database connections. MigrationStatusPrinter: Refactored method printMigrationStatus to remove unnecessary exception handling, ensuring a cleaner implementation.